--- a/api-central-hospitales/package.json
+++ b/api-central-hospitales/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -21,7 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.1",
     "mongoose": "^8.13.2",
-    "mysql2": "^3.14.0",
+    "mysql2": "^3.14.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0"
