Se cambiaron las variables para que funcionen con azure

--- a/PruebaPractica/.env
+++ b/PruebaPractica/.env
@@ -1,5 +1,13 @@
-MARIADB_ROOT_PASSWORD=root
-MARIADB_DATABASE=consultas_medicas
-MARIADB_USER=safebryan
-MARIADB_PASSWORD=081012
-MARIADB_PORT=3308
+# Datos de conexión a la base de datos local del hospital-1
+MARIADB_HOST=10.0.0.5
+MARIADB_PORT=3306
+MARIADB_USER=hospital1_user
+MARIADB_PASSWORD=password123
+MARIADB_DATABASE=hospital1
+
+# Puerto donde se ejecuta el backend de hospital-1
+PORT=3001
+
+# URL del hospital central (con IP privada ya que están en la misma red de Azure)
+API_CENTRAL_URL=http://10.0.0.4:3000
+
