--- a/api-central-hospitales/.env
+++ b/api-central-hospitales/.env
@@ -1,8 +1,5 @@
-MARIADB_HOST=localhost
-MARIADB_PORT=3309
-MARIADB_ROOT_USER=root
-MARIADB_ROOT_PASSWORD=root
-MARIADB_DATABASE=api_central_hospitales
-MARIADB_USER=safebryan
-MARIADB_PASSWORD=081012
-JWT_SECRET=MI_CLAVE_SECRETA_JWT_SUPERSEGURA
+MARIADB_HOST=10.0.0.4
+MARIADB_PORT=3306
+MARIADB_USER=central_user
+MARIADB_PASSWORD=password123
+MARIADB_DATABASE=central_hospitales
