Se cambiaron las variables para que funcionen con azure

--- a/PruebaPractica/src/main/resources/application.properties
+++ b/PruebaPractica/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/consultas_medicas?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=safebryan
-spring.datasource.password=081012
+spring.datasource.url=jdbc:mariadb://10.0.0.5:3306/hospital1?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=hospital1_user
+spring.datasource.password=password123
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
