Se cambiaron las variables para que funcionen con azure

--- a/Hospital2/src/main/resources/application.properties
+++ b/Hospital2/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-# Variables usadas por Spring Boot (se usarán en application.properties)
-SPRING_DATASOURCE_URL=jdbc:mariadb://${MARIADB_HOST}:${MARIADB_PORT}/${MARIADB_DATABASE}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-SPRING_DATASOURCE_USERNAME=${MARIADB_USER}
-SPRING_DATASOURCE_PASSWORD=${MARIADB_PASSWORD}
-SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://10.0.0.6:3306/hospital2?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=hospital2_user
+spring.datasource.password=password123
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-SPRING_JPA_HIBERNATE_DDL_AUTO=update
-SPRING_JPA_SHOW_SQL=true
-SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.data.jpa.repositories.enabled=true
