--- a/api-central-hospitales/.env
+++ b/api-central-hospitales/.env
@@ -3,3 +3,5 @@ MARIADB_PORT=3306
 MARIADB_USER=central_user
 MARIADB_PASSWORD=password123
 MARIADB_DATABASE=central_hospitales
+MARIADB_ROOT_USER=root
+MARIADB_ROOT_PASSWORD=root
