Se cambiaron las variables para que funcionen con azure

--- a/api-central-hospitales/.env
+++ b/api-central-hospitales/.env
@@ -4,4 +4,4 @@ MARIADB_USER=central_user
 MARIADB_PASSWORD=password123
 MARIADB_DATABASE=central_hospitales
 MARIADB_ROOT_USER=root
-MARIADB_ROOT_PASSWORD=root
+MARIADB_ROOT_PASSWORD= 
