--- a/api-central-hospitales/.env
+++ b/api-central-hospitales/.env
@@ -4,4 +4,5 @@ MARIADB_USER=central_user
 MARIADB_PASSWORD=password123
 MARIADB_DATABASE=central_hospitales
 MARIADB_ROOT_USER=root
-MARIADB_ROOT_PASSWORD= 
+MARIADB_ROOT_PASSWORD=root
+JWT_SECRET=MI_CLAVE_SECRETA_JWT_SUPERSEGURA
