--- a/PruebaPractica/src/main/resources/application.properties
+++ b/PruebaPractica/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Enable JPA repositories
 spring.data.jpa.repositories.enabled=true
+
+server.port=8082
